# latency_aware_lob_env

./: .gitignore  README.md  pyproject.toml
agents/: random_agent.py
lob_env/: __init__.py  env.py  execution_costs.py  latency_queue.py  requirements.txt  utils.py
notebooks/: demo_env.ipynb
tests/: test_env.py  test_latency.py
