[project]
name = "latency_aware_lob_env"
version = "0.1.0"
description = "Latency-aware Gym environment for high-frequency trading"
authors = [{name="Elliot Piet"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "gymnasium>=0.29.0",
    "matplotlib>=3.7"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lob_env*", "agents*"]
